# rust-sdk

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dprint.json  flake.nix  justfile  setup_arkd.sh
.cargo/: config.toml
.github/workflows/: ci.yml  e2e-core.yml  e2e-tests.yml
ark-bdk-wallet/: Cargo.toml
ark-bdk-wallet/src/: lib.rs  utils.rs
ark-client/: Cargo.toml
ark-client/src/: coin_select.rs  error.rs  lib.rs  round.rs  send_vtxo.rs  unilateral_exit.rs  utils.rs  wallet.rs
ark-client/src/asp/: error.rs  tree.rs
ark-core/: Cargo.toml
ark-core/src/: ark_address.rs  asp.rs  boarding_output.rs  coin_select.rs  conversions.rs  default_vtxo.rs  error.rs  forfeit_fee.rs  history.rs  internal_node.rs  lib.rs  proof_of_funds.rs  redeem.rs  round.rs  script.rs  server.rs  tx_weight_estimator.rs  unilateral_exit.rs  vtxo.rs
ark-dlc-sample/: Cargo.toml
ark-dlc-sample/src/: main.rs
ark-grpc/: Cargo.toml  build.rs
ark-grpc/src/: client.rs  error.rs  lib.rs  tree.rs  types.rs
ark-rest/: Cargo.toml  README.md
ark-rest/.openapi-generator/: FILES
ark-rest/docs/: ArkServiceApi.md  ProtobufAny.md  RpcStatus.md  StreamResultOfV1GetEventStreamResponse.md  StreamResultOfV1GetTransactionsStreamResponse.md  V1Bip322Signature.md  V1GetBoardingAddressRequest.md  V1GetBoardingAddressResponse.md  V1GetEventStreamResponse.md  V1GetInfoResponse.md  V1GetTransactionsStreamResponse.md  V1Input.md  V1MarketHour.md  V1Musig2.md  V1Node.md  V1Outpoint.md  V1Output.md  V1RedeemTransaction.md  V1RegisterInputsForNextRoundRequest.md  V1RegisterInputsForNextRoundResponse.md  V1RegisterIntentRequest.md  V1RegisterIntentResponse.md  V1RegisterOutputsForNextRoundRequest.md  V1RoundFailed.md  V1RoundFinalizationEvent.md  V1RoundFinalizedEvent.md  V1RoundSigningEvent.md  V1RoundSigningNoncesGeneratedEvent.md  V1RoundTransaction.md  V1SubmitRedeemTxRequest.md  V1SubmitRedeemTxResponse.md  V1SubmitSignedForfeitTxsRequest.md  V1SubmitTreeNoncesRequest.md  V1SubmitTreeSignaturesRequest.md  V1Tapscripts.md  V1Tree.md  V1TreeLevel.md  V1Vtxo.md
ark-rest/src/: client.rs  lib.rs
ark-rest/src/apis/: ark_service_api.rs  configuration.rs  mod.rs
ark-rest/src/models/: mod.rs  protobuf_any.rs  rpc_status.rs  stream_result_of_v1_get_event_stream_response.rs  stream_result_of_v1_get_transactions_stream_response.rs  v1_bip322_signature.rs  v1_delete_nostr_recipient_request.rs  v1_get_boarding_address_request.rs  v1_get_boarding_address_response.rs  v1_get_event_stream_response.rs  v1_get_info_response.rs  v1_get_round_by_id_response.rs  v1_get_round_response.rs  v1_get_transactions_stream_response.rs  v1_input.rs  v1_list_vtxos_response.rs  v1_market_hour.rs  v1_musig2.rs  v1_node.rs  v1_outpoint.rs  v1_output.rs  v1_ownership_proof.rs  v1_redeem_transaction.rs  v1_register_inputs_for_next_round_request.rs  v1_register_inputs_for_next_round_response.rs  v1_register_intent_request.rs  v1_register_intent_response.rs  v1_register_outputs_for_next_round_request.rs  v1_round.rs  v1_round_failed.rs  v1_round_finalization_event.rs  v1_round_finalized_event.rs  v1_round_signing_event.rs  v1_round_signing_nonces_generated_event.rs  v1_round_stage.rs  v1_round_transaction.rs  v1_set_nostr_recipient_request.rs  v1_signed_vtxo_outpoint.rs  v1_submit_redeem_tx_request.rs  v1_submit_redeem_tx_response.rs  (+7 more)
ark-rest/tests/: client.rs  wasm.rs
ark-rs/: Cargo.toml  build.rs
ark-rs/src/: ark_address.rs  asp.rs  boarding_output.rs  coin_select.rs  coinselect.rs  conversions.rs  default_vtxo.rs  error.rs  forfeit_fee.rs  internal_node.rs  lib.rs  round.rs  script.rs  send_vtxo.rs  tx_weight_estimator.rs  unilateral_exit.rs  utils.rs  wallet.rs
ark-rs/src/asp/: client.rs  error.rs  tree.rs  types.rs
ark-rust-secp256k1/: Cargo.toml
ark-rust-secp256k1-zkp/: Cargo.toml
ark-rust-secp256k1-zkp/ark-secp256k1-zkp-sys/: Cargo.toml  build.rs
ark-rust-secp256k1-zkp/ark-secp256k1-zkp-sys/src/: lib.rs
ark-rust-secp256k1-zkp/src/: lib.rs
ark-rust-secp256k1/secp256k1-sys/: build.rs
ark-rust-secp256k1/secp256k1-sys/depend/secp256k1/src/: hsort_impl.h  tests.c
ark-rust-secp256k1/secp256k1-sys/src/: lib.rs
ark-rust-secp256k1/src/: key.rs  lib.rs
ark-sample/: Cargo.toml
ark-sample/alice/: ark.seed
ark-sample/bob/: ark.config.toml  ark.seed
ark-sample/insiders/: ark.config.toml  ark.seed
ark-sample/src/: main.rs
bdk-wallet/src/: lib.rs
e2e-tests/: Cargo.toml
e2e-tests/tests/: common.rs  e2e.rs  e2e_concurrent_boarding.rs  e2e_multi-party.rs  e2e_send_onchain_boarding_output.rs  e2e_send_onchain_vtxo.rs  e2e_send_onchain_vtxo_and_boarding_output.rs  e2e_two-party.rs  e2e_two_party.rs  multi-party-e2e.rs  send_onchain.rs  send_onchain_vtxo.rs
proto/v1/: service.proto
src/: boarding_address.rs  boarding_output.rs  coinselect.rs  default_vtxo_script.rs  error.rs  forfeit_fee.rs  lib.rs  musig.rs  script.rs  tree.rs  wallet.rs
src/asp/: client.rs  types.rs
tests/: e2e.rs  wallet.rs
