[package]
name = "ark-rs"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(genproto)'] }

[dependencies]
bech32 = "0.11"
bitcoin = { version = "0.32.4", features = ["rand"] }
futures = "0.3.31"
miniscript = "12"
prost = "0.13.3"
rand = "0.8.5"
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
secp256k1_musig = { git = "https://github.com/bonomat/rust-secp256k1.git", branch = "musig2-module", package = "secp256k1"}

[dev-dependencies]
regex = "*"

[target.'cfg(genproto)'.build-dependencies]
tonic-build = { version = "0.12.3" }
