[package]
name = "ark-bdk-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ark-core = { path = "../ark-core" }
ark-rs = { path = "../ark-rs" }
async-stream = "0.3"
bdk_wallet = "1.0.0"
bitcoin = { version = "0.32.4", features = ["rand"] }
tracing = "0.1.37"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
bdk_esplora = { version = "0.20.1", default-features = false, features = ["async", "async-https"]}
esplora-client = { version = "0.11.0", default-features = false, features = ["async", "async-https", "tokio"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
bdk_esplora = { version = "0.20.1", default-features = false, features = ["std", "async-https"]}
esplora-client = { version = "0.11.0", default-features = false }
getrandom = { version = "0.2" } # TODO: Needed?
gloo-timers = { version = "0.3.0", features = ["futures"] }