[package]
name = "ark-bdk-wallet"
version = "0.5.9"
edition = "2021"

[dependencies]
anyhow = "1"
ark-client = { path = "../ark-client" }
ark-core = { path = "../ark-core" }
async-stream = "0.3"
bdk_wallet = "1.0.0"
bitcoin = { version = "0.32.4", features = ["rand"] }
jiff = "0.2.1"
tracing = "0.1.37"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
bdk_esplora = { version = "0.20.1", default-features = false, features = ["async", "async-https"] }
esplora-client = { version = "0.11.0", default-features = false, features = ["async", "async-https", "tokio"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
bdk_esplora = { version = "0.20.1", default-features = false, features = ["std", "async-https"] }
esplora-client = { version = "0.11.0", default-features = false }
getrandom = { version = "0.2" } # TODO: Needed?
gloo-timers = { version = "0.3.0", features = ["futures"] }
