[package]
name = "ark-client"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(genproto)'] }

[dependencies]
ark-core = { path = "../ark-core" }
async-stream = "0.3"
base64 = "0.22.1"
bech32 = "0.11"
bitcoin = { version = "0.32.4", features = ["rand"] }
futures = "0.3.31"
jiff = "0.2.1"
prost = "0.13.3"
prost-types = "0.13.3"
rand = "0.8"
tokio = { version = "1.41.0", features = ["sync"] }
tracing = "0.1.37"
zkp = { package = "ark-secp256k1-zkp", version = "0.10.0", path = "../ark-rust-secp256k1-zkp", features = ["serde", "rand-std"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
ark-grpc = { path = "../ark-grpc" }
backon = { version = "1", features = ["tokio-sleep"] }
tonic = { version = "0.12", features = ["tls-native-roots"] }

# TODO: We do not yet support WASM in `ark-client`. To support WASM in this high level crate, we
# will need to make it possible to use either `ark-grpc` or `ark-rest`. The current default is
# `ark-grpc`, but only `ark-rest` can support WASM.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
backon = { version = "1", features = ["gloo-timers-sleep"] }
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tonic = { version = "0.12", default-features = false, features = ["prost", "codegen"] }
tonic-web-wasm-client = { version = "0.6", default-features = false }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(genproto)'.build-dependencies]
tonic-build = { version = "0.12.3" }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt"] }
