[package]
name = "ark-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32 = "0.11"
bitcoin = { version = "0.32.4", features = ["base64", "rand"] }
rand = "0.8"
tracing = "0.1.37"
zkp = { package = "secp256k1-zkp", git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d", features = ["serde", "rand-std"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
