[package]
name = "ark-dlc-sample"
version = "0.5.9"
edition = "2021"

[dependencies]
anyhow = "1"
ark-core = { path = "../ark-core" }
ark-grpc = { path = "../ark-grpc" }
bitcoin = { version = "0.32" }
esplora-client = { version = "0.10", features = ["async-https"] }
futures = "0.3"
musig = { package = "ark-secp256k1", path = "../ark-rust-secp256k1" }
rand = "0.8"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
zkp = { package = "secp256k1-zkp", git = "https://github.com/sanket1729/rust-secp256k1-zkp", rev = "60e631c24588a0c9e271badd61959294848c665d", features = ["rand-std"] }
