[package]
name = "ark-rs"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(genproto)'] }

[dependencies]
ark-core = { path = "../ark-core" }
async-stream = "0.3"
base64 = "0.22.1"
bech32 = "0.11"
bitcoin = { version = "0.32.4", features = ["rand"] }
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
prost = "0.13.3"
prost-types = "0.13.3"
rand = "0.8"
tokio = { version = "1.41.0", features = ["sync"] }
tracing = "0.1.37"
zkp = { package = "secp256k1-zkp", git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d", features = ["serde", "rand-std"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tonic = { version = "0.12.3", features = ["tls-native-roots"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
tonic = { version = "0.12", default-features = false, features = ["prost", "codegen"] }
tonic-web-wasm-client = { version = "0.6", default-features = false }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(genproto)'.build-dependencies]
tonic-build = { version = "0.12.3" }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt"] }
