[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bdk-wallet = { path = "../ark-bdk-wallet" }
ark-core = { path = "../ark-core" }
ark-rs = { path = "../ark-rs" }
async-stream = "0.3"
bdk_esplora = "0.19.0"
bdk_wallet = "1.0.0-beta.5"
bech32 = "0.11"
bitcoin = { version = "0.32.4", features = ["rand"] }
bitcoinconsensus = "0.106.0"
esplora-client = { version = "0.10.0", features = ["async-https", "blocking-https"] }
futures = "0.3.31"
prost = "0.13.3"
rand = "0.8.5"
regex = "1"
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
zkp = { package = "secp256k1-zkp", git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d", features = ["serde", "rand-std"] }
